Install React 18.3.1 and Next.js 14.2.3

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "canary",
-    "react": "19.0.0-beta-4508873393-20240430",
-    "react-dom": "19.0.0-beta-4508873393-20240430"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "20.4.5",
-    "@types/react": "18.2.18",
+    "@types/react": "^18.3.1",
     "typescript": "5.1.3"
   }
 }
